--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ input {
 <canvas></canvas>
 <p></p>
 <nav>
-    <input id="delay" type="range" min="0" max="100" step="10" value="0">
+    <input id="max_items" type="range" min="0" max="100000" step="10000" value="50000" title="50000">
+    <input id="delay" type="range" min="0" max="100" step="10" value="0" hidden="true">
     <input id="enabled" type="button" value="stop">
     <input id="reset" type="button" value="reset">
     <input id="splice" type="button" value="splice">
@@ -37,22 +38,27 @@ input {
 let canvas = document.querySelector('canvas')
 let p = document.querySelector('p')
 
+let input_max_items = document.getElementById('max_items')
 let input_delay = document.getElementById('delay')
 let input_enabled = document.getElementById('enabled')
 let input_reset = document.getElementById('reset')
 let input_splice = document.getElementById('splice')
 
 let enabled = true
+let max_items = 50000
 let delay = 0
 let price = 0
 let i = 0
 
+let labels = []
+let data = []
+
 let chart = new Chart(canvas, {
     type: 'line',
     data: {
-        labels: [],
+        labels: labels,
         datasets: [
-            {data: []},
+            {data: data},
         ],
     },
     options: {
@@ -90,6 +96,12 @@ let chart = new Chart(canvas, {
     },
 })
 
+input_max_items.addEventListener('change', function (event) {
+    max_items = event.target.value
+    labels.splice(0, labels.length - max_items)
+    data.splice(0, data.length - max_items)
+    event.target.title = max_items
+})
 input_delay.addEventListener('change', function (event) {
     delay = event.target.value
 })
@@ -103,15 +115,13 @@ input_enabled.addEventListener('click', function (event) {
     }
 })
 input_reset.addEventListener('click', function (event) {
-    chart.data.labels = []
-    chart.data.datasets[0].data = []
-    i = 0
+    labels.splice(0, Infinity)
+    data.splice(0, Infinity)
     chart.update()
 })
 input_splice.addEventListener('click', function (event) {
-    chart.data.labels.splice(0, Math.trunc(chart.data.labels.length / 2))
-    chart.data.datasets[0].data.splice(0, Math.trunc(chart.data.datasets[0].data.length / 2))
-    i = chart.data.datasets[0].data.length
+    labels.splice(0, Math.trunc(labels.length / 2))
+    data.splice(0, Math.trunc(data.length / 2))
     chart.update()
 })
 
@@ -122,12 +132,17 @@ while (true) {
     let coinflip = Math.random() < 0.5
     price += coinflip ? 1 : -1
 
-    chart.data.labels.push(i)
-    chart.data.datasets[0].data.push(price)
+    if (data.length >= max_items) {
+        labels.shift()
+        data.shift()
+    }
+
+    labels.push(i)
+    data.push(price)
     chart.update()
 
     i++
-    p.textContent = i.toLocaleString()
+    p.textContent = `${data.length} / ${i.toLocaleString()}`
 }
 
 </script>
