add locale string for data length

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ while (true) {
     chart.update()
 
     i++
-    p.textContent = `${data.length} / ${i.toLocaleString()}`
+    p.textContent = `${data.length.toLocaleString()} / ${i.toLocaleString()}`
 }
 
 </script>
