responsve; ty dan!
Co-authored-by: Danny <130334262+az4dan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     margin: 0;
     padding: 0;
 }
+body {
+    height: 100vh;
+}
 p {
     color: gray;
     position: absolute;
@@ -64,7 +67,6 @@ let chart = new Chart(canvas, {
         ],
     },
     options: {
-        animation: false,
         datasets: {
             line: {
                 borderWidth: 1,
@@ -95,6 +97,8 @@ let chart = new Chart(canvas, {
                 enabled: false,
             },
         },
+        animation: false,
+        maintainAspectRatio: false,
     },
 })
 
